@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-02T01:13:19Z",
+  "timestamp" : "2022-08-02T16:15:18Z",
   "count_outdated" : 424,
   "uniques_outdated" : 229,
-  "count" : 452,
-  "uniques" : 243,
+  "count" : 453,
+  "uniques" : 244,
   "clones" : [
     {
       "timestamp": "2022-07-20T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-08-01T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
